<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="app.com.biodiv.speciestraits.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/species_container"
            style="@style/species_container_style"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quiz_para"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/quiz_para" />


            <TextView
                android:id="@+id/species_title"
                style="@style/question_style"
                android:textStyle="italic"
                android:text="@string/species_title" />

            <ImageView
                android:id="@+id/species_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/species_title" />

            <TextView
                android:id="@+id/species_description"
                style="@style/description_style"
                android:fontFamily="sans-serif-medium"
                android:text="@string/species_description" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_1_container"
            style="@style/question_container_style">


            <TextView
                style="@style/question_style"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/question_1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_1_first_radio"
                    style="@style/question_radio_button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_option_1" />

                <RadioButton
                    android:id="@+id/question_1_second_radio"
                    style="@style/question_radio_button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_option_2" />

                <RadioButton
                    android:id="@+id/question_1_third_radio"
                    style="@style/question_radio_button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_option_3" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_2_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/question_2_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_2_first_radio"
                    style="@style/question_radio_button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_option_1" />

                <RadioButton
                    android:id="@+id/question_2_second_radio"
                    style="@style/question_radio_button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_option_2" />

            </RadioGroup>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_3_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/question_3_1_checkbox"
                    style="@style/question_checkbox_style"
                    android:text="@string/question_3_option_1" />

                <CheckBox
                    android:id="@+id/question_3_2_checkbox"
                    style="@style/question_checkbox_style"
                    android:text="@string/question_3_option_2" />

                <CheckBox
                    android:id="@+id/question_3_3_checkbox"
                    style="@style/question_checkbox_style"
                    android:text="@string/question_3_option_3" />

                <CheckBox
                    android:id="@+id/question_3_4_checkbox"
                    style="@style/question_checkbox_style"
                    android:text="@string/question_3_option_4" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_4_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_4" />

            <EditText
                android:id="@+id/question_4_edit_text_min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Min in cm" />

            <EditText
                android:id="@+id/question_4_edit_text_max"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Max in cm" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_5_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_5" />

            <RadioGroup
                android:id="@+id/question_5_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_5_first_radio"
                    style="@style/question_radio_button_style"
                    android:text="@string/question_5_option_1" />

                <RadioButton
                    android:id="@+id/question_5_second_radio"
                    style="@style/question_radio_button_style"
                    android:text="@string/question_5_option_2" />

                <RadioButton
                    android:id="@+id/question_5_third_radio"
                    style="@style/question_radio_button_style"
                    android:text="@string/question_5_option_3" />

            </RadioGroup>


        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkQuiz"
            android:text="Submit" />

    </LinearLayout>
</ScrollView>